eks_cicd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: USERS
    app.kubernetes.io/instance: USERS-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: users
spec:
  selector:
    app: USERS
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 5000
